derive/tests/ui/attr-invalid-meta-list-names.stderr
error: Invalid attribute parameter(s): 'Xalias'. Expected 'alias'
 --> $DIR/attr-invalid-meta-list-names.rs:5:2
  |
5 |       /// Returns a protocol version
  |  _____^
6 | |     #[rpc(name = "protocolVersion", Xalias("alias"))]
7 | |     fn protocol_version(&self) -> Result<String>;
  | |_________________________________________________^
